css/style.css
*{
    margin: 0;
    padding: 0;
    font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings: "width" 100;
    box-sizing: border-box; /* ENSURES PADDING AND BORDER ARE INCLUDED IN THE ELEMENT'S TOTAL WIDTH AND HEIGHT */
}

html, body {
    height: 100vh;
}

body {
    display: flex;
    flex-direction: column;
}

a {
    all: unset;
    cursor: pointer;
}

.active {
    font-weight: bold;
}

/*===========================================*/
/* -------------LANDING PAGE--------------  */
/*===========================================*/

/* Here begins the Header */
header{
    background-color: #1f2937;
    border-bottom: 0.3px solid #c4ccff;
}

.container {
    display: flex;
    max-width: 1200px;
    justify-content: space-between;
    align-items: center;
    height: 70px;
    padding: 0 20px;
    margin: 0 auto;
}

/* Logo */
.logo {
    font-weight: bold;
    font-size: 24px;
    
    color: #f9faf8;
}

.logo span {
    font-weight: lighter;
}

/* Menu */
.menu {
    display: flex;
    gap: 20px;
}

.menu a {
    text-decoration: none;
    color: #f9faf8;
    font-size: 18px;
}

.menu a:hover {
    color: #dad9c0;
}

.menu a span {
    text-decoration: underline;
    
}

/* Main Content Landing Page*/
main {
    flex: 1; 
        
}

/* Here begins the Main hero Content */
.main-hero {
    display: flex;
    background-color: #1f2937;
    justify-content: center;
    align-items: center;
    padding: 40px 0px 60px 0px;
    flex-wrap: wrap;
}

.main-hero-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 60px;
    width: 100%;
    max-width: 1200px;    
    padding: 0 40px;
    margin: 0 auto;
    flex-wrap: wrap;
}

.main-hero-left {
    display: flex;
    color: #f9faf8;
    flex-direction: column;
    gap: 10px;
    flex: 1;
}
.main-hero-left h1 {
    margin: 0;
    font-size: 48px;
    font-weight: bolder;
    text-align: start;
    text-decoration: none;
}

.main-hero-left p {
    margin: 0px;
    font-size: 18px;
    line-height: 1.4;
    color: #e5e7eb;
}

.main-hero-left button {
    width:fit-content;
    padding: 12px 24px;
    border: none;
    border-radius: 8px;
    background: #3882f6;
    color: #f9faf8;
    font-weight: bold;
    cursor: pointer;
    transition: 0.3s;
    margin-top: 10px;
}

.main-hero-left button:hover {
    background: #2a74eb;
}

.main-hero-right {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: end;
    gap: 20px;
}

.main-hero-right img{
    width: 80%;
    height: auto;
    border: 1px solid white;
    border-radius: 12px;   
}

/*--------------------------------------*/
/* Here begins the Special Offers Content */

.main-section {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.random-info {
    width: 100%;
    max-width: 1200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 40px;
    
}

.random-info-heading {
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: row;
    margin-top: 20px;
}

.random-info-heading h2 {
    align-items: center;
    justify-content: center;
    text-decoration: underline;
    font-weight: bolder;
    font-size: 36px;  
}

.random-info-cards {
    flex-direction: row;
    justify-content: center;
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}




/*--------------------------------------*/
/* Here begins the Quote Content */
.quote-landing-page {
    display: flex;
    background-color: #e5e7eb;
    font-size: 36px;
    font-weight: 200;
    font-style: italic;
    color: #1f2937;
    max-width: 1000px;
    gap: 20px;
    padding: 80px;
    margin-top: 40px;
    flex-direction: column;
    border-radius: 8px;
}

.quote-landing-page-top {
    width: 100%;
    
}

.quote-landing-page-bottom {
    display: flex;
    flex-direction: row;
    align-items: end;
    justify-content: end;
    text-align: end;
    font-size: 18px;
    font-weight: 500;
}

/*--------------------------------------*/
/* Here begins the promo-boxes Content */
.promo-boxes-landing-page {
    width: 100%;
    max-width: 1200px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 40px;
    align-items: center;
    margin-top: 40px;
    
}

.promo-boxes {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
    background-color: #F5F4F0;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 1 10px 20px rgba(0, 0, 0, 0.1);   
    border-top: 0.3px solid #c4ccff;
    border-bottom: 0.3px solid #c4ccff;
}

.promo-boxes img {
    max-width: 40%;
    margin-bottom: 30px;
}

.promo-boxes h4 {
    max-width: 100%;
    text-align: center;
    font-size: 20px;
    border-bottom: 0.3px solid #c4ccff;
}

.promo-boxes p {
    max-width: 100%;
    text-align: center;
    font-weight:300;
}

/*--------------------------------------*/
/* Here begins the Call to Action Content */
.call-to-action-landing-page {
    max-width: 1000px;
    display: flex;
    background-color: #3882F6;
    color: #f9faf8;
    padding: 40px;
    margin: 30px 0px 30px 0px;
    border-radius: 5px;
    gap: 60px;
    align-items: center;
    flex-wrap: wrap;
}

.call-to-action-landing-page-left :first-child {
    font-weight: bold;
    font-size: 24px;
}

.call-to-action-landing-page-left :last-child {
    font-weight: 200;
    font-size: 18px;
}

.call-to-action-landing-page-right a{
    
    border: 1px solid #f9faf8;
    color: #f9faf8;
    background-color:#3882F6;
    padding: 10px 20px 10px 20px;
    border-radius: 5px;
}

.call-to-action-landing-page-right a:hover {
    background-color:#f9faf8;
    color: #3882F6;
    border: 1px solid #3882F6;
}
/* ... */

